2006-03-15  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: changed category and type of the disco#info result
    	for the jabber server (closing bug 35)

2005-12-13  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_roster.c: remove pending subscription requests on
    	account deletion

2005-12-12  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_roster.c: passing original subscription request to user
    * jabberd/lib/jabberdlib.h: same

2005-12-11  Matthias Wimmer  <m@tthias.net>

    * jabberd/config.c: detecting stale pidfiles
    * jabberd/jabberd.h: adding namespace aware xdb_act_path()
    * jabberd/xdb.c: same
    * jabberd/lib/xhash.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/base/base_accept.c: using xdb_act_path() instead of xdb_act()
    * jsm/sessions.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_offline.c: same + updated JEP-0013 support to version 1.2
    * xdb_sql/xdb_sql.c: supporting xdb_act_path()
    * xdb_file/xdb_file.c: same
    * jabberd/base/base_load.c: moved from jabberd/load.c
    * jabberd/base/base.c: moved from jabberd/static.c
    * jabberd/base/base_null.c: moved from within deliver.c
    * jabberd/jabberd.c: merged static_init() and dynamic_init() to base_init()

2005-12-10  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/xmlnode.c: fixed hiding attribute nodes, getting node prefix
    * jabberd/lib/expat.c: xmlnode_str takes a const string
    * jabberd/lib/jabberdlib.h: same, and getting node prefix
    * xdb_file/xdbfiletool.c: implementing set/del operation again

2005-12-09  Matthias Wimmer  <m@tthias.net>

    * xdb_file/xdbfiletool.c: more options handled by libpopt

2005-12-08  Matthias Wimmer  <m@tthias.net>

    * jabberd/config.c: Generate warning: diff namespaces when include
    * jabberd/jabberd.c: use libpopt for commandline parsing
    * xdb_file/xdbfiletool.c: start using libpopt for commandline parsing